Refactored BEAUti classes